Litlir punktar komnir og virkar að teikna CYAN línu í griddið.